2005-09-20  Larry Jones  <lawrence.jones@ugs.com>

	* cvs.texinfo: Move summary and detail contents to the front
	where they belong.

2005-09-14  Derek Price  <derek@ximbiot.com>

	* Makefile.am: s#cvs.1#$(srcdir)/cvs.1#.

2005-09-12  Derek Price  <derek@ximbiot.com>

	* Makefile.am (stamp-gdt): Use texinfo, as opposed to C, comments in
	the automatically generated getdate-cvs.texi file.

2005-09-11  Larry Jones  <lawrence.jones@ugs.com>

	* cvs.texinfo (Common options): Note that -r branch for a revision
	means the head of the branch.

2005-09-10  Larry Jones  <lawrence.jones@ugs.com>

	* cvs.texinfo (Error messages): Add suggested messages.

2005-09-09  Larry Jones  <lawrence.jones@ugs.com>

	* cvs.texinfo (Error messages): Move out of sync message to correct
	location and reword.
	Clean up bad cross reference syntax.

	* cvs.texinfo (Error messages): Add signal 11 message.

2005-09-06  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (config): Alphabetize list of keys.

	* cvs.texinfo (Global options): Clarify -T description with temporary
	file path precedence.
	(config): Shorten TmpDir stuff and reference Global options node.
	(Environment variables): Ditto for $TMPDIR.  Remove $TMP and $TEMP.  As
	near as I can tell they are no longer used.

2005-09-05  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (config): Mention TmpDir first appeared in 1.12.13.

	* cvs.texinfo (config): Describe new TmpDir option.

2005-09-04  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (config): Describe new [cvsroot] syntax.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo: Update links and email addresses.

2005-08-31  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (CVS commands): Link to new node.
	(server & pserver): New node.
	(config): Note configurability of config file path.

2005-08-29  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (verifymsg): Describe new %{sV} format strings.

2005-08-29  Derek Price  <derek@ximbiot.com>
